Misc Fixes for 2.0.3 (#466)
* Prevent overlay title from overflowing

* Ensure that margins are maintain when combining funnel page headings and Heading component

* Polish notification dismiss and notification general styles

* Repair visibility input toggle and useState in story

* changelog

* Enable optiona overlay header text wrapping

* Changelog

--- a/src/Components/Overlay/Overlay.scss
+++ b/src/Components/Overlay/Overlay.scss
@@ -61,25 +61,49 @@
 
 .cf-overlay--header {
   @extend %overlay-children;
-  height: $cf-overlay--header-height;
   display: flex;
-  padding: 0 $cf-overlay--gutter;
   justify-content: space-between;
-  align-items: center;
+  width: 100%;
   @include no-user-select();
 }
+
 
 .cf-overlay--title {
   font-family: $cf-overlay--title-font;
   font-size: $cf-overlay--title-size;
   font-weight: $cf-overlay--title-weight;
   color: $cf-overlay--title-color;
-  white-space: nowrap;
+  
+  .cf-overlay--header__dismissable & {
+    width: calc(100% - #{$cf-overlay--header-height - 50px});
+  }
+}
+
+.cf-overlay--header__nowrap {
+  height: $cf-overlay--header-height;
+  padding: 0 $cf-overlay--gutter;
+  align-items: center;
+
+  .cf-overlay--title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.cf-overlay--header__wrap {
+  min-height: $cf-overlay--header-height;
+  padding: $cf-marg-c $cf-overlay--gutter;
+  align-items: flex-start;
+
+  .cf-overlay--title {
+    word-break: break-all;
+  }
 }
 
 .cf-overlay--dismiss {
-  width: ($cf-overlay--header-height - 20px);
-  height: ($cf-overlay--header-height - 20px);
+  width: ($cf-overlay--header-height - 50px);
+  height: ($cf-overlay--header-height - 32px);
   position: relative;
   background-color: transparent;
   border: 0;
@@ -91,7 +115,7 @@
     content: '';
     position: absolute;
     top: 50%;
-    left: calc(50% + 10px);
+    left: 50%;
     width: 22px;
     height: 2px;
     border-radius: 1px;
